# eportal-guard

./: .gitignore  Cargo.toml  ICON_BUILD_GUIDE.md  README.md  SESSION_HANDOFF.md  log.txt  project_prd.txt
.github/: copilot-instructions.md
.github/workflows/: release-on-tag.yml
scripts/: build_app_bundle.sh  retag_latest.sh
src/: autostart.rs  config.rs  debuglog.rs  login.rs  main.rs  network.rs  notifier.rs  paths.rs  platform.rs  single_instance.rs  tray.rs  web.rs
src/Assets.xcassets/AppIcon.appiconset/: Contents.json
