[package]
name = "eportal_guard"
version = "0.1.0"
edition = "2024"

[dependencies]
notify-rust = { version = "4", default-features = false }
tiny_http = "0.12"
tray-icon = "0.19"
png = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication"] }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true
