[package]
name = "eportal_guard"
version = "0.0.0"
edition = "2024"

[dependencies]
notify-rust = { version = "4", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tiny_http = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = { version = "4", default-features = false, features = ["z"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
